# decentrilized-e2e-encrypted-chat

./: Cargo.toml  README.md
src/: crypto.rs  main.rs  network.rs  storage.rs  ui.rs
